Optimize Hub Content: Replaced 'Building' new hubs with 'Optimizing' existing ones to focus on UX, reduced friction, and value propositions.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -601,7 +601,7 @@
         <section class="slide slide-light">
             <div class="animate-up">
                 <span class="tag tag-teal">Solution</span>
-                <h2>Filling the Gaps: Strategic Content Expansion</h2>
+                <h2>Optimizing Core Hubs: Structure & Value</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <!-- Setup Hub -->
                     <div class="card">
@@ -614,20 +614,20 @@
                     </div>
                      <!-- Wealth Hub -->
                     <div class="card">
-                        <h3>2. "Wealth" Knowledge Hub</h3>
-                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: Niche Financial Terms</p>
+                        <h3>2. Enrich "Wealth" Hub</h3>
+                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Goal: Demonstrate Authority</p>
                         <ul style="margin-top: 0.5rem;">
-                            <li><strong>Asset:</strong> <code>/knowledge/wealth</code></li>
+                            <li><strong>Action:</strong> Restructure content hierarchy for clarity.</li>
                             <li><strong>Hook:</strong> PDF Summaries of complex regulations.</li>
                         </ul>
                     </div>
                     <!-- Directory -->
                     <div class="card">
-                        <h3>3. Business Directory</h3>
-                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: Commercial Intent</p>
+                        <h3>3. Enhance Directory</h3>
+                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Goal: Reduce User Friction</p>
                         <ul style="margin-top: 0.5rem;">
-                            <li><strong>Asset:</strong> <code>/directory/companies</code></li>
-                            <li><strong>Hook:</strong> Indexable list of 5,000+ verified tenants.</li>
+                            <li><strong>Action:</strong> Add "Value Propositions" to company profiles.</li>
+                            <li><strong>UX:</strong> Advanced filters to reduce search confusion.</li>
                         </ul>
                     </div>
                 </div>
@@ -638,19 +638,22 @@
         <section class="slide slide-alt">
              <div class="animate-up">
                 <span class="tag tag-teal">Solution</span>
-                <h2>"Experience DIFC" Lifestyle Hubs</h2>
+                <h2>Optimizing "Experience" (Dining & Wellness)</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="card">
-                        <h3>Dining Hub</h3>
-                        <p>Curated lists by vibe ("Best Business Lunch", "Date Night").</p>
+                        <h3>Refine Dining Categories</h3>
+                        <p><strong>Goal:</strong> Reduce choice paralysis.</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Group by occasion (Business Lunch vs Fine Dining).</p>
                     </div>
                     <div class="card">
-                        <h3>Art & Culture</h3>
-                        <p>"DIFC Art Nights" interactive map & gallery calendar.</p>
+                        <h3>Wellness & Art</h3>
+                        <p><strong>Goal:</strong> Enhance discovery.</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Consolidate fragmented pages into a "Wellness Journey".</p>
                     </div>
                     <div class="card">
-                        <h3>Events</h3>
-                        <p>Weekly updated "What's On" guides to drive footfall.</p>
+                        <h3>Goal-Oriented Events</h3>
+                        <p><strong>Goal:</strong> Drive physical footfall.</p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"Plan Your Visit" features to convert interest to action.</p>
                     </div>
                 </div>
             </div>
@@ -684,7 +687,7 @@
                         <div class="phase-header">Phase 2: Expansion (Mo 2-5)</div>
                         <div class="phase-content">
                             <ul>
-                                <li>Deploy Cost Calculators</li>
+                                <li>Optimize Setup Hub</li>
                                 <li>Lifestyle Sub-hubs</li>
                                 <li>Partner Badge Campaign</li>
                                 <li>Digital PR Launch</li>
