Strategy Update: Replace 'Build/Create' with 'Fix/Refine' across all slides to emphasize optimizing existing assets.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -605,7 +605,7 @@
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <!-- Setup Hub -->
                     <div class="card">
-                        <h3>1. Optimize "Business Hub"</h3>
+                        <h3>1. Fix "Business Hub" UX</h3>
                         <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: "Set up business in Dubai" (Non-Branded)</p>
                         <ul style="margin-top: 0.5rem;">
                             <li><strong>Action:</strong> Refine existing <code>/business</code> section.</li>
@@ -687,8 +687,8 @@
                         <div class="phase-header">Phase 2: Expansion (Mo 2-5)</div>
                         <div class="phase-content">
                             <ul>
-                                <li>Optimize Setup Hub</li>
-                                <li>Lifestyle Sub-hubs</li>
+                                <li>Fix Setup Hub UX</li>
+                                <li>Refine Lifestyle Sub-hubs</li>
                                 <li>Partner Badge Campaign</li>
                                 <li>Digital PR Launch</li>
                             </ul>
@@ -727,7 +727,7 @@
                         <tbody>
                             <tr style="border-bottom: 1px solid #ddd;">
                                 <td style="padding: 1rem;"><strong>Content</strong></td>
-                                <td style="padding: 1rem;">Build "Setup Guide" Hub • Create "Experience" Landing Pages • Publish Wealth Series</td>
+                                <td style="padding: 1rem;">Fix "Setup Guide" Hub UX • Refine "Experience" Landing Pages • Publish Wealth Series</td>
                             </tr>
                              <tr style="border-bottom: 1px solid #ddd;">
                                 <td style="padding: 1rem;"><strong>Technical</strong></td>
