Add Executive Summary slide: Strategy in a Nutshell

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -44,7 +44,41 @@
             </div>
         </section>
 
-        <!-- Slide 2: Agenda -->
+        <!-- Slide 2: Executive Summary -->
+        <section class="slide slide-alt">
+            <div class="animate-up">
+                <span class="tag tag-gold">Executive Summary</span>
+                <h2>The Strategy in a Nutshell</h2>
+                <div class="card-grid" style="grid-template-columns: repeat(4, 1fr);">
+                    <div class="card">
+                        <div class="metric-big" style="color: var(--deep-navy); font-size: 2rem; margin-bottom: 0.5rem;">#1</div>
+                        <h3>The Status</h3>
+                        <p><strong>"We are #1"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Authority is secure. We dominate branded search.</p>
+                    </div>
+                    <div class="card">
+                        <div class="metric-big" style="color: #e63946; font-size: 2rem; margin-bottom: 0.5rem;">The Gap</div>
+                        <h3>Non-Branded</h3>
+                        <p><strong>"Growth is Dubai"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">High friction on "Setup" pages is costing us leads.</p>
+                    </div>
+                    <div class="card">
+                        <div class="metric-big" style="color: var(--primary-teal); font-size: 2rem; margin-bottom: 0.5rem;">The Fix</div>
+                        <h3>Experience</h3>
+                        <p><strong>"Fix the Hubs"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Optimize UX, add Calculators, reduce form friction.</p>
+                    </div>
+                    <div class="card">
+                        <div class="metric-big" style="color: var(--gold); font-size: 2rem; margin-bottom: 0.5rem;">The Plan</div>
+                        <h3>Execution</h3>
+                        <p><strong>"9-Month Sprint"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Accelerated roadmap to capture value fast.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Slide 3: Agenda -->
         <section class="slide slide-light">
             <div class="animate-up">
                 <span class="tag tag-teal">Agenda</span>
