Refine Narrative: Change 'Dubai Growth' to 'Capture High Intent' to be more precise.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -59,8 +59,8 @@
                     <div class="card">
                         <div class="metric-big" style="color: #e63946; font-size: 2rem; margin-bottom: 0.5rem;">The Gap</div>
                         <h3>Non-Branded</h3>
-                        <p><strong>"Growth is Dubai"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">High friction on "Setup" pages is costing us leads.</p>
+                        <p><strong>"Capture High Intent"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">We win brand ("DIFC"), but lose generic intent ("Cost", "Steps").</p>
                     </div>
                     <div class="card">
                         <div class="metric-big" style="color: var(--primary-teal); font-size: 2rem; margin-bottom: 0.5rem;">The Fix</div>
@@ -139,7 +139,7 @@
                     <div class="card">
                         <div class="metric-big">Attract</div>
                         <h3>New Businesses</h3>
-                        <p>Dominate broader terms: <strong>"Fintech license Dubai"</strong> (#5 → #1) & <strong>"Business Setup UAE"</strong>.</p>
+                        <p>Dominate generic intent: <strong>"Fintech license cost"</strong> (#5 → #1) & <strong>"Business Setup Steps"</strong>.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big">Promote</div>
@@ -747,7 +747,7 @@
                     <!-- Setup Hub -->
                     <div class="card">
                         <h3>1. Fix "Business Hub" UX</h3>
-                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: "Set up business in Dubai" (Non-Branded)</p>
+                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: Generic "Setup" Intent (Non-Branded)</p>
                         <ul style="margin-top: 0.5rem;">
                             <li><strong>Action:</strong> Refine existing <code>/business</code> section.</li>
                             <li><strong>Add:</strong> Cost Calculator & Activity Picker (User Intent).</li>
