Pivot to B2B Strategy: Removed Lifestyle fluff, added Retailer Case Study, and focused on Educating the Unaware.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -58,15 +58,15 @@
                     </div>
                     <div class="card">
                         <div class="metric-big" style="color: #e63946; font-size: 2rem; margin-bottom: 0.5rem;">The Gap</div>
-                        <h3>Non-Branded</h3>
-                        <p><strong>"Capture High Intent"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">We win brand ("DIFC"), but lose generic intent ("Cost", "Steps").</p>
+                        <h3>The Paradox</h3>
+                        <p><strong>"Traffic ≠ Understanding"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">We treat users as "Experts", but they are "Learners" with pain points.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big" style="color: var(--primary-teal); font-size: 2rem; margin-bottom: 0.5rem;">The Fix</div>
-                        <h3>Experience</h3>
-                        <p><strong>"Fix the Hubs"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Optimize UX, add Calculators, reduce form friction.</p>
+                        <h3>Content Strategy</h3>
+                        <p><strong>"Educate to Convert"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Shift from "Lifestyle Fluff" to <strong>Value Propositions & Case Studies</strong>.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big" style="color: var(--gold); font-size: 2rem; margin-bottom: 0.5rem;">The Plan</div>
@@ -139,7 +139,7 @@
                     <div class="card">
                         <div class="metric-big">Attract</div>
                         <h3>New Businesses</h3>
-                        <p>Dominate generic intent: <strong>"Fintech license cost"</strong> (#5 → #1) & <strong>"Business Setup Steps"</strong>.</p>
+                        <p>Address specific pain: <strong>"How to scale from Jordan to Saudi?"</strong> & <strong>"Protecting IP with English Law"</strong>.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big">Promote</div>
@@ -149,7 +149,7 @@
                     <div class="card">
                         <div class="metric-big">Engage</div>
                         <h3>Lifestyle</h3>
-                        <p>Capture local intent for dining, arts, and events to drive footfall.</p>
+                        <p>Address specific pain: <strong>"How to scale from Jordan to Saudi?"</strong> & <strong>"Protecting IP with English Law"</strong>.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big">Authority</div>
@@ -235,27 +235,27 @@
                 <h2>Audience & Funnel Focus</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="card">
-                        <h3>Top of Funnel</h3>
-                        <p class="tag tag-teal">Awareness</p>
+                        <h3>Unaware (Pain)</h3>
+                        <p class="tag tag-teal">Top of Funnel</p>
                         <ul style="margin-top: 1rem;">
-                            <li>"Business setup cost Dubai"</li>
-                            <li>"Best financial zones UAE"</li>
+                            <li>"Why can't I open a bank account?"</li>
+                            <li>"How to export to Saudi?"</li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>Mid Funnel</h3>
-                        <p class="tag tag-teal">Consideration</p>
+                        <h3>Solution Aware</h3>
+                        <p class="tag tag-teal">Mid Funnel</p>
                         <ul style="margin-top: 1rem;">
-                            <li>"Fintech license Dubai"</li>
-                            <li>"DIFC vs ADGM comparison"</li>
+                            <li>"benefits of dubai for retail startup"</li>
+                            <li>"english common law vs local courts"</li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>Bottom Funnel</h3>
-                        <p class="tag tag-teal">Conversion</p>
+                        <h3>Provider Aware</h3>
+                        <p class="tag tag-teal">Bottom Funnel</p>
                         <ul style="margin-top: 1rem;">
-                            <li>"DIFC license cost calculator"</li>
-                            <li>"Apply for fintech license"</li>
+                            <li>"DIFC retail license cost"</li>
+                            <li>"DIFC vs UK LLC comparison"</li>
                         </ul>
                     </div>
                 </div>
@@ -435,7 +435,7 @@
                     </div>
                 </div>
                 <div class="card" style="margin-top: 2rem; background: var(--deep-navy); color: white; text-align: center;">
-                    <p style="font-size: 1.2rem;">"We use SEO to <strong>attract</strong>, and Structure to <strong>convince</strong>."</p>
+                    <p style="font-size: 1.2rem;">"Stop selling 'Memberships'. Start solving <strong>Business Problems</strong>."</p>
                 </div>
             </div>
         </section>
@@ -746,11 +746,11 @@
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <!-- Setup Hub -->
                     <div class="card">
-                        <h3>1. Fix "Business Hub" UX</h3>
-                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: Generic "Setup" Intent (Non-Branded)</p>
+                        <h3>1. Persona-Based Hubs</h3>
+                        <p style="font-size: 0.9rem; margin-bottom: 0.5rem;">Target: The "Unaware" B2B Founder</p>
                         <ul style="margin-top: 0.5rem;">
-                            <li><strong>Action:</strong> Refine existing <code>/business</code> section.</li>
-                            <li><strong>Add:</strong> Cost Calculator & Activity Picker (User Intent).</li>
+                            <li><strong>Action:</strong> Create "Retail Tech Scaling Guide" (The Jordan Case).</li>
+                            <li><strong>Add:</strong> "Problem/Solution" Case Studies (e.g. Oral Care Importer).</li>
                         </ul>
                     </div>
                      <!-- Wealth Hub -->
@@ -779,22 +779,22 @@
         <section class="slide slide-alt">
              <div class="animate-up">
                 <span class="tag tag-teal">Solution</span>
-                <h2>Optimizing "Experience" (Dining & Wellness)</h2>
+                <h2>Case Study: The "Unaware" Retailer</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="card">
-                        <h3>Refine Dining Categories</h3>
-                        <p><strong>Goal:</strong> Reduce choice paralysis.</p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Group by occasion (Business Lunch vs Fine Dining).</p>
+                        <h3>1. The Pain (Jordan)</h3>
+                        <p><strong>"I can't scale."</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Limited market, slow IP protection, no Saudi access.</p>
                     </div>
                     <div class="card">
-                        <h3>Wellness & Art</h3>
-                        <p><strong>Goal:</strong> Enhance discovery.</p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Consolidate fragmented pages into a "Wellness Journey".</p>
+                        <h3>2. The Objection</h3>
+                        <p><strong>"DIFC is too expensive."</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"Why pay $1,500 when I can get a UK LLC for €300?"</p>
                     </div>
                     <div class="card">
-                        <h3>Goal-Oriented Events</h3>
-                        <p><strong>Goal:</strong> Drive physical footfall.</p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"Plan Your Visit" features to convert interest to action.</p>
+                        <h3>3. The Education</h3>
+                        <p><strong>"Real Market Access"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"UK LLC = No Bank Account. DIFC = Access to Saudi Retailers."</p>
                     </div>
                 </div>
             </div>
@@ -829,7 +829,7 @@
                         <div class="phase-content">
                             <ul>
                                 <li>Fix Setup Hub UX</li>
-                                <li>Refine Lifestyle Sub-hubs</li>
+                                <li>Launch "Scale" Case Studies</li>
                                 <li>Partner Badge Campaign</li>
                                 <li>Digital PR Launch</li>
                             </ul>
