Rename Presentation Title: From Traffic to Trust - A B2B Content Strategy

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -35,9 +35,9 @@
             </div>
             <div class="animate-up">
                 <span class="tag tag-gold" style="margin-bottom: 2rem;">Strategy Assignment</span>
-                <h1>Becoming the Dominant<br>Digital Destination</h1>
-                <h2>For Finance & Lifestyle in Dubai</h2>
-                <p style="opacity: 0.8; margin-top: 2rem;">A Data-Driven SEO Strategy & technical Audit</p>
+                <h1>From Traffic to Trust:<br>A B2B Content Strategy</h1>
+                <h2>Educating the "Unaware" to Drive Revenue</h2>
+                <p style="opacity: 0.8; margin-top: 2rem;">A Pivot from "SEO Traffic" to "User Problem Solving"</p>
             </div>
             <div class="scroll-indicator" style="color: white;">
                 ↓ Scroll to start
