Aggressive Pivot: Diagnosis Slides (Madness, Gap, Failure) implemented.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -44,35 +44,35 @@
             </div>
         </section>
 
-        <!-- Slide 2: Executive Summary -->
+        <!-- Slide 2: The Diagnosis -->
         <section class="slide slide-alt">
             <div class="animate-up">
-                <span class="tag tag-gold">Executive Summary</span>
-                <h2>The Strategy in a Nutshell</h2>
+                <span class="tag tag-gold">The Diagnosis</span>
+                <h2>The Site is Fighting the User</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(4, 1fr);">
                     <div class="card">
-                        <div class="metric-big" style="color: var(--deep-navy); font-size: 2rem; margin-bottom: 0.5rem;">#1</div>
-                        <h3>The Status</h3>
-                        <p><strong>"We are #1"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Authority is secure. We dominate branded search.</p>
+                        <div class="metric-big" style="color: #e63946; font-size: 2rem; margin-bottom: 0.5rem;">The Madness</div>
+                        <h3>Navigation</h3>
+                        <p><strong>"Lost in Noise"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Crypto news mixes with restaurants. The B2B user has no clear path.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big" style="color: #e63946; font-size: 2rem; margin-bottom: 0.5rem;">The Gap</div>
-                        <h3>The Paradox</h3>
-                        <p><strong>"Traffic ≠ Understanding"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">We treat users as "Experts", but they are "Learners" with pain points.</p>
+                        <h3>Content</h3>
+                        <p><strong>"Unscannable Walls"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Huge text blocks. No Case Studies. No Value Props. Just "Brochure".</p>
+                    </div>
+                    <div class="card">
+                        <div class="metric-big" style="color: #e63946; font-size: 2rem; margin-bottom: 0.5rem;">The Failure</div>
+                        <h3>Funnel</h3>
+                        <p><strong>"Where is the Tool?"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Users want "Utility" (Cost). We give them a generic "Enquire" form.</p>
                     </div>
                     <div class="card">
                         <div class="metric-big" style="color: var(--primary-teal); font-size: 2rem; margin-bottom: 0.5rem;">The Fix</div>
-                        <h3>Content Strategy</h3>
-                        <p><strong>"Educate to Convert"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Shift from "Lifestyle Fluff" to <strong>Value Propositions & Case Studies</strong>.</p>
-                    </div>
-                    <div class="card">
-                        <div class="metric-big" style="color: var(--gold); font-size: 2rem; margin-bottom: 0.5rem;">The Plan</div>
-                        <h3>Execution</h3>
-                        <p><strong>"9-Month Sprint"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Accelerated roadmap to capture value fast.</p>
+                        <h3>Strategy</h3>
+                        <p><strong>"Educate & Solve"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Rebuild the flow for the "Unaware" Learner (Startup).</p>
                     </div>
                 </div>
             </div>
@@ -131,30 +131,34 @@
         </section>
 
         <!-- Slide 4: Aligning Goals -->
+        <!-- Slide 4: The Core Problem (Table) -->
         <section class="slide slide-light">
             <div class="animate-up">
-                <span class="tag tag-teal">Context</span>
-                <h2>Aligning Business & SEO Goals</h2>
-                <div class="card-grid">
-                    <div class="card">
-                        <div class="metric-big">Attract</div>
-                        <h3>New Businesses</h3>
-                        <p>Address specific pain: <strong>"How to scale from Jordan to Saudi?"</strong> & <strong>"Protecting IP with English Law"</strong>.</p>
+                <span class="tag tag-teal">The Analysis</span>
+                <h2>Why Users Bounce: The "Value Gap"</h2>
+                <div class="card-grid" style="grid-template-columns: 1fr 1fr 1fr;">
+                    <!-- Row 1 -->
+                    <div class="card" style="border-left: 5px solid #e63946;">
+                        <h3>1. Trust & Risk</h3>
+                        <p><strong>User Need:</strong> "Is my business safe?"</p>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Site Problem:</strong> No Case Studies. Shallow content on protection.</p>
+                        <p style="margin-top: 0.5rem; font-weight: bold;">Impact: Low Trust.</p>
                     </div>
-                    <div class="card">
-                        <div class="metric-big">Promote</div>
-                        <h3>Ecosystem</h3>
-                        <p>Drive visibility for the Academy, Innovation Hub, and Wealth Centre.</p>
+                    <div class="card" style="border-left: 5px solid #e63946;">
+                        <h3>2. Utility & Cost</h3>
+                        <p><strong>User Need:</strong> "Can I afford this?"</p>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Site Problem:</strong> "Enquire Now" button instead of a Calculator.</p>
+                        <p style="margin-top: 0.5rem; font-weight: bold;">Impact: High Friction.</p>
                     </div>
-                    <div class="card">
-                        <div class="metric-big">Engage</div>
-                        <h3>Lifestyle</h3>
-                        <p>Address specific pain: <strong>"How to scale from Jordan to Saudi?"</strong> & <strong>"Protecting IP with English Law"</strong>.</p>
+                    <div class="card" style="border-left: 5px solid #e63946;">
+                        <h3>3. Clarity</h3>
+                        <p><strong>User Need:</strong> "Is this for me?"</p>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Site Problem:</strong> Irrelevant content (Restaurants next to Laws).</p>
+                        <p style="margin-top: 0.5rem; font-weight: bold;">Impact: Paralysis.</p>
                     </div>
-                    <div class="card">
-                        <div class="metric-big">Authority</div>
-                        <h3>Thought Leadership</h3>
-                        <p>Establish authority via rankings for "future of finance" topics.</p>
+                    <!-- Row 2 -->
+                    <div class="card" style="grid-column: span 3; background: var(--deep-navy); color: white; text-align: center;">
+                        <p style="font-size: 1.2rem;"><strong>The Result:</strong> The user leaves to find a simpler solution (UK LLC).</p>
                     </div>
                 </div>
             </div>
@@ -162,43 +166,38 @@
 
         <!-- SECTION 2: STRATEGY FRAMEWORK -->
 
-        <!-- Slide 5: Strategic Pillars (Flywheel) -->
+        <!-- Slide 5: The Awareness Gap -->
         <section class="slide slide-alt">
             <div class="animate-up delay-100">
-                <span class="tag tag-teal">Strategy</span>
-                <h2>Our Strategic Pillars</h2>
-                <div class="card-grid">
-                    <div class="card">
-                        <h3>1. Acquire</h3>
-                        <p>Capture high-intent searches for business setup and leasing.</p>
+                <span class="tag tag-teal">The Audience Gap</span>
+                <h2>Who Are We Talking To?</h2>
+                <div class="card-grid" style="grid-template-columns: repeat(2, 1fr); align-items: center;">
+                    <!-- Left: The Assumption -->
+                    <div class="card" style="opacity: 0.6; border: 1px dashed #666;">
+                        <h3>Site Assumption: "The Expert"</h3>
+                        <p>We think the user knows:</p>
+                        <ul style="margin-top: 1rem;">
+                            <li>"I want DIFC specifically."</li>
+                            <li>"I know what English Common Law is."</li>
+                            <li>"I am ready to enquire."</li>
+                        </ul>
                     </div>
-                    <div class="card">
-                        <h3>2. Educate</h3>
-                        <p>Build trust with thought leadership on regulations and market reports.</p>
-                    </div>
-                    <div class="card">
-                        <h3>3. Engage</h3>
-                        <p>Retain interest with vibrant lifestyle content, events, and offers.</p>
-                    </div>
-                </div>
-                <!-- Flywheel Visualization -->
-                <div class="flywheel-container animate-up delay-200">
-                    <div class="flywheel-orbit">
-                        <div class="orbit-item item-1">
-                            <span class="orbit-text">Acquire</span>
-                        </div>
-                        <div class="orbit-item item-2">
-                            <span class="orbit-text">Educate</span>
-                        </div>
-                        <div class="orbit-item item-3">
-                            <span class="orbit-text">Engage</span>
-                        </div>
-                    </div>
-                    <div class="flywheel-core">
-                        <span style="font-weight: 700; color: white; letter-spacing: 1px;">GROWTH</span>
-                        <span style="font-size: 0.8rem; color: var(--gold); margin-top: 5px;">CYCLE</span>
+                    <!-- Right: The Reality -->
+                    <div class="card" style="border: 2px solid #e63946; transform: scale(1.05);">
+                        <h3 style="color: #e63946;">Reality: "The Learner" (B2B)</h3>
+                        <p>The user actually asks:</p>
+                        <ul style="margin-top: 1rem;">
+                            <li>"Can I afford Dubai?"</li>
+                            <li>"How do I protect my IP?"</li>
+                            <li>"Why not just open a £300 UK LLC?"</li>
+                        </ul>
                     </div>
                 </div>
+                <!-- Impact Statement -->
+                <div class="card" style="margin-top: 2rem; background: var(--deep-navy); color: white; text-align: center;">
+                    <p style="font-size: 1.2rem;"><strong>The disconnect:</strong> We are selling "Prestige" to users who are buying "Safety & Utility".</p>
+                </div>
+            </div>
             </div>
         </section>
 
