Refine Title and Context: Updated Main Title to Full Funnel and Simplified 'What is DIFC' definition for B2B audience.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="animate-up">
                 <span class="tag tag-gold" style="margin-bottom: 2rem;">Strategy Assignment</span>
-                <h1>From Traffic to Trust:<br>A B2B Content Strategy</h1>
+                <h1>From Traffic → Awareness →<br>Engagement → Conversion</h1>
                 <h2>Educating the "Unaware" to Drive Revenue</h2>
                 <p style="opacity: 0.8; margin-top: 2rem;">A Pivot from "SEO Traffic" to "User Problem Solving"</p>
             </div>
@@ -104,27 +104,30 @@
             </div>
         </section>
 
-        <!-- Slide 3: Business Context -->
         <section class="slide slide-alt">
             <div class="animate-up">
                 <span class="tag tag-teal">Context</span>
-                <h2>What is DIFC.com About?</h2>
+                <h2>What Actually is DIFC?</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr);">
                     <div class="card">
-                        <h3>Leading Financial Hub</h3>
-                        <p>Middle East’s top financial centre including Licensing, Regulation, and Legal System.</p>
+                        <h3>1. A "City" with English Law</h3>
+                        <p>It's not just Dubai. It's a special jurisdiction with its own <strong>Court System</strong> based on English Common Law.</p>
+                        <p style="margin-top: 0.5rem; color: var(--gold); font-size: 0.9rem;">Value: Legal Safety for Investors.</p>
                     </div>
                     <div class="card">
-                        <h3>Comprehensive Ecosystem</h3>
-                        <p>Home to the Innovation Hub, Academy, Family Wealth Centre, and Sustainability initiatives.</p>
+                        <h3>2. The Region's "Wall Street"</h3>
+                        <p>The HQ for every major bank (Goldman, Citibank) and Law Firm in the Middle East.</p>
+                        <p style="margin-top: 0.5rem; color: var(--gold); font-size: 0.9rem;">Value: Proximity to Capital.</p>
                     </div>
                     <div class="card">
-                        <h3>Lifestyle Destination</h3>
-                        <p>Premier dining, high-end retail, art galleries, events, and luxury residences.</p>
+                        <h3>3. A Connected Experience</h3>
+                        <p>Luxury Lifestyle (Zuma, Arts Club) integrated with Grade-A Offices.</p>
+                        <p style="margin-top: 0.5rem; color: var(--gold); font-size: 0.9rem;">Value: Talent Retention.</p>
                     </div>
                     <div class="card">
-                        <h3>Target Audience</h3>
-                        <p>Financial institutions, Fintech startups, Family offices, UHNWIs, Professionals, and Tourists.</p>
+                        <h3>4. The Gateway</h3>
+                        <p>The legal and logistical bridge between East (China) and West (London).</p>
+                        <p style="margin-top: 0.5rem; color: var(--gold); font-size: 0.9rem;">Value: Market Access (Saudi/Egypt).</p>
                     </div>
                 </div>
             </div>
